--- a/src/Pages/WelcomePage/index.module.css
+++ b/src/Pages/WelcomePage/index.module.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 5% 5%;
+  padding: 20px 20px;
   width: 90%;
   min-height: min(80vh, 600px);
   background-color: whitesmoke;
@@ -23,13 +23,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 30px;
   width: 100%;
-  margin-top: 50px;
 }
 
 .btn {
   margin-top: 10px;
-  width: 130px;
+  width: 80%;
   border-radius: 20px;
 }
 
@@ -37,15 +37,17 @@
 @media screen and (min-width: 768px) {
   .welcomeContentParentDiv {
     width: 70%;
+    padding: 5% 5%;
   }
 
   .btnParentDiv {
     flex-direction: row;
     justify-content: space-around;
-    width: 100%;
+    margin-top: 10px;
   }
 
   .btn {
     margin-top: 10px;
+    width: 200px;
   }
 }
