--- a/src/Pages/QuizPage/index.module.css
+++ b/src/Pages/QuizPage/index.module.css
@@ -1,13 +1,10 @@
 .parentDiv {
   display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgb(92, 72, 163);
-  width: 100%;
   min-height: 100vh;
 }
 
-.welcomeContentParentDiv {
+.questionContentParentDiv {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -16,7 +13,8 @@
   width: 90%;
   min-height: min(80vh, 600px);
   background-color: whitesmoke;
-  border-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .btnParentDiv {
@@ -35,8 +33,8 @@
 
 /*LARGE*/
 @media screen and (min-width: 768px) {
-  .welcomeContentParentDiv {
-    width: 70%;
+  .questionContentParentDiv {
+    width: 60%;
     padding: 5% 5%;
   }
 
