--- a/src/Pages/QuizPage/index.module.css
+++ b/src/Pages/QuizPage/index.module.css
@@ -57,11 +57,12 @@
   padding-top: 20px;
 }
 
-.answerContent button {
-  color: black;
+.answerContent .answer {
   padding-inline: 5vw;
+  padding-block: 10px;
   border-radius: 10px;
   margin-block: 10px;
+  text-align: center;
 }
 
 .answerContentBtnParentDiv {
@@ -76,8 +77,6 @@
 .answerContentBtnParentDiv button {
   min-width: 30%;
   border-radius: 20px;
-  background-color: whitesmoke;
-  color: black;
 }
 
 /*END-ANSWER CONTENT*/
